Refactored TrendService to use ITrendService interface
Fixed type mismatch in Home.razor: trends now uses TrendViewModel

--- a/TrendifyAI/MudBlazorServer/Components/_Imports.razor
+++ b/TrendifyAI/MudBlazorServer/Components/_Imports.razor
@@ -12,3 +12,8 @@
 @using MudBlazor.Services
 @using MudBlazorServer
 @using MudBlazorServer.Components
+@using MudBlazorServer.Models
+@using MudBlazorServer.ViewModels
+@using MudBlazorServer.Services
+@using Microsoft.AspNetCore.Authorization
+@using MudBlazorServer.Services.Interfaces
