--- a/TrendifyAI/MudBlazorServer/Components/Pages/Home.razor
+++ b/TrendifyAI/MudBlazorServer/Components/Pages/Home.razor
@@ -1,5 +1,51 @@
 ﻿@page "/"
 
+@attribute [Authorize]
+@inject ITrendService TrendService
+
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
+    <MudText Typo="Typo.h3" GutterBottom="true">TrendifyAI</MudText>
+    <MudTextField @bind-Value="niche" Label="Enter Niche" Variant="Variant.Outlined" Margin="Margin.Dense" />
+    <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mt-2" OnClick="ScanTrends">Scan Trends</MudButton>
+
+    @if (isLoading)
+    {
+        <MudProgressCircular Color="Color.Primary" Indeterminate="true" Class="mt-4" />
+    }
+    else if (trends != null)
+    {
+        <MudGrid Class="mt-4">
+            @foreach (var trend in trends)
+            {
+                <MudItem xs="12" sm="6" md="4">
+                    <MudCard>
+                        <MudCardContent>
+                            <MudText Typo="Typo.h6">@trend.Trend</MudText>
+                            <MudText>@trend.SuggestedContent</MudText>
+                        </MudCardContent>
+                    </MudCard>
+                </MudItem>
+            }
+        </MudGrid>
+    }
+    </MudContainer>
+
+    @code {
+    private string niche = "";
+    // private List<TrendResult> trends;
+    private List<TrendViewModel> trends; // Fixed: Use TrendViewModel
+    private bool isLoading = false;
+
+    private async Task ScanTrends()
+    {
+        isLoading = true;
+        trends = await TrendService.GetTrends(niche);
+        isLoading = false;
+    }
+}
+
+@* @page "/"
+
 <PageTitle>Home</PageTitle>
 
 <MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
@@ -55,4 +101,4 @@
     <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issue-1950424116" Target="_blank" Typo="Typo.body2" Color="Color.Primary">
         More details
     </MudLink>
-</MudText>
+</MudText> *@
